# SDL2CMakeProject

./: .gitignore  CMakeLists.txt  README.md
SDL2CMakeProject/: CMakeLists.txt  SDL2CMakeProject.cpp  SDL2CMakeProject.h
SDL2CMakeProject/src/: AfxFile.h  IControl.h  IElement.cpp  IElement.h  ILayout.h  StaticText.cpp  StaticText.h  Window.cpp  Window.h
